--- a/src/components/WeatherAPI/WeatherAPI.css
+++ b/src/components/WeatherAPI/WeatherAPI.css
@@ -11,12 +11,12 @@
     max-width: 450px;
 }
 
-.header {
+h3 {
     font-size: 1.5rem;
     padding-top: 15px;
 }
 
-.input {
+input {
     font-size: 1.2rem;
     line-height: 2rem;
     border-radius: 5px;
@@ -25,7 +25,7 @@
     background: #ddd;
 }
 
-.input:focus {
+input:focus {
     background: #eee;
 }
 
